fixed submenu out of viewport

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -208,6 +208,10 @@ li.default-menu {
 				margin: 0;
 				right: 10px;
 			}
+
+			> ul.spacious-menu--left {
+				left: -100%;
+			}
 		}
 
 		ul {
